--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
 
  
 script:
-  - docker run -e CI=true vijayanands/docker-react npm run test -- --coverage
+  - docker run vijayanands/docker-react npm run test -- --coverage
 
 
